--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "finalhandler",
+  "name": "@silverwind/finalhandler",
   "description": "Node.js final http responder",
   "version": "1.1.2",
   "author": "Douglas Christopher Wilson <doug@somethingdoug.com>",
